feat: Part 5 - Add Apache Flink order lifecycle processor